# brace-web

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/brace-web/: Cargo.toml
crates/brace-web-core/: Cargo.toml
crates/brace-web-core/src/: lib.rs  redirect.rs
crates/brace-web-form/: Cargo.toml
crates/brace-web-form/src/: form.rs  lib.rs  url_encoded.rs
crates/brace-web-form/src/url_encoded/: error.rs  mod.rs
crates/brace-web-markup/: Cargo.toml
crates/brace-web-markup/fixtures/: serde.json  template-2.txt  template-3.txt
crates/brace-web-markup/src/: lib.rs  parser.rs  render.rs
crates/brace-web-markup/src/node/: attribute.rs  document.rs  element.rs  mod.rs  text.rs
crates/brace-web-markup/src/node/element/: attribute.rs  mod.rs
crates/brace-web-markup/src/tree/: document.rs  node.rs  text.rs
crates/brace-web-markup/src/tree/element/: attribute.rs  mod.rs  tag.rs
crates/brace-web-markup/src/util/: parser.rs  render.rs
crates/brace-web-markup/templates/: example-001.txt
crates/brace-web-markup/tests/: serde.rs  template.rs
crates/brace-web/src/: lib.rs
