[package]
name = "brace-web-core"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The web application framework core."
repository = "https://github.com/brace-rs/brace-web"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
futures = "0.3"
