[package]
name = "brace-web-markup"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A web application markup templating engine."
repository = "https://github.com/brace-rs/brace-web"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
indexmap = "1.2"
