[package]
name = "brace-web-markup"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A web application markup templating engine."
repository = "https://github.com/brace-rs/brace-web"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
brace-parser = { git = "https://github.com/brace-rs/brace-parser", rev = "c85faf303ac83ab5f2c5e529b7d6a559b2456a28" }
brace-web-core = { path = "../brace-web-core" }
futures = "0.3"
indexmap = { version = "1.2", features = ["serde-1"] }
once_cell = "1.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
