[package]
name = "brace-web"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A web application framework."
repository = "https://github.com/brace-rs/brace-web"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["core", "form", "markup"]
core = ["brace-web-core"]
form = ["brace-web-form"]
markup = ["brace-web-markup"]

[dependencies]
brace-web-core = { path = "../brace-web-core", optional = true }
brace-web-form = { path = "../brace-web-form", optional = true }
brace-web-markup = { path = "../brace-web-markup", optional = true }
